prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_literal_int_to_string.diag.txt
ERROR: expression of type 'int' cannot be assigned to type 'string'
testData/diagnostics/compilation_errors/type_inference/test_literal_int_to_string.nut:2:0

// EXPECTED: compile-time error - integer literal assigned to string variable
local x: string = 42
^-------------------
return x


